--- a/buy-beats.html
+++ b/buy-beats.html
@@ -64,7 +64,7 @@
             <a class="nav-link link text-white display-4" href="about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-white display-4" href="contact.html">CONTACT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+            <a class="nav-link link text-white display-4" href="contact.html">CONTACT</a>
           </li>
         </ul>
 
