--- a/mixing.html
+++ b/mixing.html
@@ -82,12 +82,12 @@
             <div class="media-container-row">
                 <div class="title col-12 col-md-8">
                     <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1"></h2>
-                    <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">
+                    <!-- <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-5">
                         Article header with background image and parallax effect
                     </h3>
                     <p class="mbr-text align-center mbr-white pb-3 mbr-fonts-style display-7">
                         Shape your future web project with sharp design and refine coded functions
-                    </p>
+                    </p> -->
 
                 </div>
             </div>
