--- a/cart.html
+++ b/cart.html
@@ -106,7 +106,7 @@
 
                         <td class="actions" data-th="">
                             <button class="btn btn-info btn-sm">
-                                <i class="fa fa-refresh"></i>
+                                <i class="fa fa-play"></i>
                             </button>
                             <button class="btn btn-danger btn-sm">
                                 <i class="fa fa-trash-o"></i>
@@ -126,7 +126,7 @@
                                 <i class="fa fa-angle-left"></i>   Continue Shopping</a>
                         </td>
 
-                        <td class="hidden-xs text-center">
+                        <td class="hidden-xs">
                             <strong>Total Rp. 6500,-</strong>
                         </td>
                         <td>
